src/test/deca/context/valid/sansObjet/simpleClass.deca
// Description:
//    Programme qui creé une class.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2020

class A {
  int x;
}
